Fixed bug header not responsive. Ready to validate again.

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ img, embed, object, video {
   Header styling
 */
 
-.header_text {
+.header_text_font_size {
   font-size: .75em;
 }
 
@@ -178,23 +178,25 @@ img, embed, object, video {
   margin-right: 5px;
 }
 .header_box_text {
-  max-width: 75%;
+  width: 75%;
 }
 .header_box_logo {
-  max-width: 25%;
+  width: 25%;
 }
 .me_text {
   padding-left: 5px;
   padding-right: 3px;
 }
 .box_header {
-  position: relative;
+  /*position: relative;*/
 }
-.box_header_logo {}
+.box_header_logo {
+
+}
 .box_header_my_name {
-  position: absolute;
+  /*position: absolute;
   top: 0px;
-  right: 0px;
+  right: 0px;*/
 }
 .section_questions {}
 .section_comments {}
